--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
+  "name": "web-app-portfolio",
+  "author": "Ricardo Doberstein",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^3.46.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -10,9 +12,11 @@
     "@types/node": "^12.20.15",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "@types/styled-components": "^5.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.3.4",
     "web-vitals": "^1.1.2"
   },
